--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -24,8 +24,12 @@
                         <p><input type="search" name="q" placeholder="События, артисры и места"> 
                         <img class="search" src="{% static 'img/search.png' %}" alt="search">
                     </form> 
-                    <a class="city" href="#"><img class="marker-img" src="{% static 'img/mapmarker.png' %}" alt="place">Москва</a> 
-                    <a class="login" href="#">Войти</a>          
+                    <a class="city" href="#"><img class="marker-img" src="{% static 'img/mapmarker.png' %}" alt="place">Москва</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'auth:logout' %}" class="login">Выйти</a>
+                    {% else %}
+                        <a href="{% url 'auth:login' %}" class="login">Войти</a>
+                    {% endif %}
             </div>
 			{% include 'mainapp/includes/inc_main_menu.html' %}
 		</div>
