--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -28,9 +28,8 @@
         <div class="registration-auth">Уже есть аккаунт на Яндексе? <a class="registration-link" href="#">Войти</a>
         </div>
         <footer class="registration-footer">
-            <span class="registration-footer-text">Ru</span>
-            <a class="registration-link registration-footer-link-support" href="https://yandex.ru/support/passport/" target="_blank">Помощь</a>
-            <span class="registration-footer-text">&copy;&nbsp;2001-2019,&nbsp;</span><a class="registration-link" href="https://yandex.ru/" target="_blank">Яндекс</a>
+            <span class="registration-footer-text">&#169; 2019</span>
+            <a href="{% url 'main:index' %}" class="registration-link">«Я ИДУ»</a>
         </footer>
     </div>
 </body>
