--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -4,52 +4,54 @@
 {% block content %}
 
     <div class="registration-header">
-        <a href={% url 'main:index' %}><img class="login-logo-img" src="{% static 'img/yandex_logo.png' %}" alt="logo"></a>
-        <h1 class="login-title">Войдите, чтобы продолжить</h1>
+        <div class="registration-header">
+            <h1 class="registration-header-descr">Вход</h1>
+        </div>
     </div>
+
     <form class="registration-form" action="{% url 'auth:login' %}" method="post">
         {% csrf_token %}
-        {% if next %}
-            <input type="hidden" name="next" value="{{ next }}">
-        {% endif %}
+
         {{ login_form.as_p }}
-        <!--
-        <input type="text" class="registration-form-input" placeholder="Введите логин, почту или телефон">
-        <input type="password" class="registration-form-input" placeholder="Пароль">
-        -->
+
         <input class="registration-button" type="submit" value="Войти">
     </form>
+
+    <div class="registration-auth">Нет аккаунта?
+        <a class="registration-link" href="{% url 'auth:register' %}">Зарегистрироваться</a>
+    </div>
+
     <div class="login-social-block">
-        <h3 class="login-social-title">Войти с&nbsp;помощью соцсетей</h3>
+        <h3 class="login-social-title">Войти с помощью соцсетей</h3>
         <div class="login-social-icons">
             <div>
-                <a href="#" class="login-social-link login-social-link-margin social-color-vk" target="_blank">
-                        <i class="fab fa-vk fa-2x"></i>
+                <a href="#" class="login-social-link login-social-link-margin social-color-vk">
+                    <i class="fab fa-vk fa-2x"></i>
                 </a>
             </div>
             <div>
-                <a href="#" class="login-social-link social-color-facebook" target="_blank">
+                <a href="#" class="login-social-link social-color-facebook">
                     <i class="fab fa-facebook-f fa-2x"></i>
                 </a>
             </div>
             <div>
-                <a href="#" class="login-social-link social-color-google" target="_blank">
+                <a href="#" class="login-social-link social-color-google">
                     <i class="fab fa-google fa-2x"></i>
                 </a>
             </div>
             <div>
-                <a href="#" class="login-social-link social-color-telegram" target="_blank">
+                <a href="#" class="login-social-link social-color-telegram">
                     <i class="fab fa-telegram-plane fa-2x"></i>
                 </a>
             </div>
             <div>
-                <a href="#" class="login-social-link social-color-ok" target="_blank">
-                        <i class="fab fa-odnoklassniki fa-2x"></i>
+                <a href="#" class="login-social-link social-color-ok">
+                    <i class="fab fa-odnoklassniki fa-2x"></i>
                 </a>
             </div>
             <div>
-                <a href="#" class="login-social-link social-color-twitter" target="_blank">
-                        <i class="fab fa-twitter fa-2x"></i>
+                <a href="#" class="login-social-link social-color-twitter">
+                    <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </div>
         </div>
