--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -1,12 +1,12 @@
 <div>
 	<ul class="menu wrapper">
-		<li><a href="#">Кино</a></li>
-		<li><a href="#">Концерты</a></li>
-		<li><a href="#">Театр</a></li>
+		<li><a href="{% url 'main:category' 12 %}">Выставки</a></li>
+		<li><a href="{% url 'main:category' 11 %}">Концерты</a></li>
+		<li><a href="{% url 'main:category' 10 %}">Фестивали</a></li>
 		<li><a href="#">Подарочные сертификаты</a></li>
-		<li><a href="#">Детям</a></li>
-		<li><a href="#">Спорт</a></li>
+		<li><a href="{% url 'main:category' 4 %}">Детям</a></li>
+		<li><a href="{% url 'main:category' 16 %}">Спорт</a></li>
 		<li><a href="#">Бесплатно</a></li>
-		<li><a href="#">Ещё</a></li>
+		<li><a href="{% url 'main:category' 19 %}">На воздухе</a></li>
 	</ul>
 </div>
