Доработана главная страница
готовы фильтры, а именно:
- Меню (инклуд переделан)
- подборки на главной (кроме коллекций)
- все эвенты кликабельны (но из-за отсутствия фото открываться не будет :( )
- добавил функции в views
- мини-добавление в CSS

--- a/mainapp/templates/mainapp/events.html
+++ b/mainapp/templates/mainapp/events.html
@@ -8,113 +8,16 @@
         {% include 'mainapp/includes/inc_date_menu.html' %}
     </div>
     <div class="nearest all">
-        {% for product in products_all %}
+        {% for product in events_all %}
         <div class="event-preview">
-            <a href="{% url 'events:event' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-            <h2>{{ event.name }}</h2>
+            <a href="{% url 'main:product' product.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <h2>{{ product.name }}</h2>
             <ul >
-                <li><a href="#">14 июня</a></li>
-                <li><a href="#">Открытие Арена</a></li>
+                <li><a href="#">{{ product.location.name }}</a></li>
+                <li><a href="#">от {{ product.price }}руб.</a></li>
             </ul>
         </div>
         {% endfor %}
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="event-preview">-->
-<!--            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>-->
-<!--            <h2>Ленинград</h2>-->
-<!--            <ul >-->
-<!--                <li><a href="#">14 июня</a></li>-->
-<!--                <li><a href="#">Открытие Арена</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-
     </div>
 </div>
 {% endblock %}
