--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -26,30 +26,18 @@
 			</a>
 		</div>
 		<div class="nearest">
-			<div>
-				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-				<h2>Ленинград</h2>
+			{% for event in first_filter %}
+			<div class="event-preview">
+				<a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<h2>{{ event.name }}</h2>
 				<ul >
-					<li><a href="#">14 июня</a></li>
-					<li><a href="#">Открытие Арена</a></li>
+	<!--                <li><a href="#">{{ event.date }}</a></li>-->
+					<li><a href="#">{{ event.location.name }}</a></li>
+					<li><a href="#">от {{ event.price }} руб.</a></li>
+
 				</ul>
 			</div>
-			<div>
-				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-				<h2>Ленинград</h2>
-				<ul >
-					<li><a href="#">14 июня</a></li>
-					<li><a href="#">Открытие Арена</a></li>
-				</ul>
-			</div>
-			<div>
-				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-				<h2>Ленинград</h2>
-				<ul >
-					<li><a href="#">14 июня</a></li>
-					<li><a href="#">Открытие Арена</a></li>
-				</ul>
-			</div>
+			{% endfor %}
 		</div>
 		<div class="event-category">
 			<h1 class="page-title">Самые ожидаемые концерты</h1>
@@ -58,30 +46,18 @@
 			</a>
 		</div>
 		<div class="nearest">
-			<div>
-				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-				<h2>Ленинград</h2>
-				<ul >
-					<li><a href="#">14 июня</a></li>
-					<li><a href="#">Открытие Арена</a></li>
-				</ul>
-			</div>
-			<div>
-				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-				<h2>Ленинград</h2>
-				<ul >
-					<li><a href="#">14 июня</a></li>
-					<li><a href="#">Открытие Арена</a></li>
-				</ul>
-			</div>
-			<div>
-				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
-				<h2>Ленинград</h2>
-				<ul >
-					<li><a href="#">14 июня</a></li>
-					<li><a href="#">Открытие Арена</a></li>
-				</ul>
-			</div>
+ 			{% for event in expect_concert %}
+				<div class="event-preview">
+					<a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+					<h2>{{ event.name }}</h2>
+					<ul >
+		<!--                <li><a href="#">{{ event.date }}</a></li>-->
+						<li><a href="#">{{ event.location.name }}</a></li>
+						<li><a href="#">от {{ event.price }} руб.</a></li>
+
+					</ul>
+				</div>
+			{% endfor %}
 		</div>
 		<h1 class="page-title">Подборки</h1>
 		<div class="selections">
