--- a/static/css/style.css
+++ b/static/css/style.css
@@ -120,6 +120,7 @@ body {
     background: rgba(0, 0, 0, 0.07);
 }
 .header-bunner {
+    margin-top: 20px;
     width: 100%;
     height: 80px;
     background-color: #8b0bffb8;
