add get_avatar to event model get image on main page and events category

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -28,7 +28,7 @@
 		<div class="nearest">
 			{% for event in first_filter %}
 			<div class="event-preview">
-				<a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
 				<h2>{{ event.name }}</h2>
 				<ul >
 	<!--                <li><a href="#">{{ event.date }}</a></li>-->
@@ -48,7 +48,7 @@
 		<div class="nearest">
  			{% for event in expect_concert %}
 				<div class="event-preview">
-					<a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+					<a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
 					<h2>{{ event.name }}</h2>
 					<ul >
 		<!--                <li><a href="#">{{ event.date }}</a></li>-->
