--- a/mainapp/templates/mainapp/events_list.html
+++ b/mainapp/templates/mainapp/events_list.html
@@ -11,7 +11,7 @@
     <div class="nearest all">
         {% for event in events %}
         <div class="event-preview">
-            <a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
             <h2>{{ event.name }}</h2>
             <ul >
 <!--                <li><a href="#">{{ event.date }}</a></li>-->
