--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -20,7 +20,7 @@
 <body>
 <div class="wrapper-head">
     <div class="header wrapper">
-        <a href="{% url 'main:index' %}"><img class="logo-img" src="{% static 'img/1280px-Yandex_afisha.png' %}"
+        <a href="{% url 'main:index' %}"><img class="logo-img" src="{% static 'img/street-icon-png-8.png' %}"
                                               alt="logo"></a>
         <form>
             <p><input type="search" name="q" placeholder="События, артисры и места">
