--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -3,24 +3,27 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>
         IamGO / {{ page_title|default:"страница"|title }}
     </title>
+
     <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/png"/>
     {% block css %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
               integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
               crossorigin="anonymous">
-    {% endblock %}
-    {% block js %}
     {% endblock %}
 </head>
 
 <body>
 <div class="wrapper-head">
     <div class="header wrapper">
-        <a href="{% url 'main:index' %}"><img class="logo-img" src="{% static 'img/1280px-Yandex_afisha.png' %}"
+        <a href="{% url 'main:index' %}"><img class="logo-img" src="{% static 'img/street-icon-png-8.png' %}"
                                               alt="logo"></a>
         <form>
             <p><input type="search" name="q" placeholder="События, артисры и места">
@@ -107,6 +110,17 @@
     </div>
 {% endblock %}
 
+{% block js %}
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 
 </html>
