--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -6,17 +6,46 @@
 	<div class="page-content" >
 		<h1 class="page-title first-title">Афиша событий в Москве</h1>
 		<div>
-			<ul class="menu-date">
-				<li><a href="#">Дата</a></li>
-				<li><a href="#">Сегодня</a></li>
-				<li><a href="#">Завтра</a></li>
-				<li><a href="#">На выходных</a></li>
-			</ul>
+			{% include 'mainapp/includes/inc_date_menu.html' %}
 		</div>
-		<div class="slide-show">
-			<div class="slide"><a href="#"><img src="{% static 'img/bunners/s940x380.webp' %}" alt="slide"></a>
-				<a href="#"><img class="slide-button-foword slide-button" src="{% static 'img/next-button.svg' %}" alt="foword"></a>
-				<a href="#"><img class="slide-button-next slide-button" src="{% static 'img/next-button.svg' %}" alt="next"></a>
+		<div class="bd-example">
+			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+			  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+			  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+			  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="{% static 'img/bunners/s940x380.webp' %}" class="d-block w-100" alt="first_bunner">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>First slide label</h5>
+				  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img src="{% static 'img/bunners/s940x380_1.webp' %}" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>Second slide label</h5>
+				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img src="{% static 'img/bunners/s940x380.webp' %}" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>Third slide label</h5>
+				  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+				</div>
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
 			</div>
 		</div>
 		<div class="event-category">
@@ -28,7 +57,7 @@
 		<div class="nearest">
 			{% for event in first_filter %}
 			<div class="event-preview">
-				<a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
 				<h2>{{ event.name }}</h2>
 				<ul >
 	<!--                <li><a href="#">{{ event.date }}</a></li>-->
@@ -48,7 +77,7 @@
 		<div class="nearest">
  			{% for event in expect_concert %}
 				<div class="event-preview">
-					<a href="{% url 'main:product' event.pk %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+					<a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
 					<h2>{{ event.name }}</h2>
 					<ul >
 		<!--                <li><a href="#">{{ event.date }}</a></li>-->
@@ -96,3 +125,4 @@
 		</div>
 	</div>
 {% endblock %}
+
