--- a/mainapp/templates/mainapp/product.html
+++ b/mainapp/templates/mainapp/product.html
@@ -53,8 +53,10 @@
 			</div>
 			<div class="event-adress">
 				<h1 class="page-title">Адрес</h1>
-				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2b776ce032f9626db09c2e91c0f1fb369a75f83c3bb5b2bd00c7d21dec7c5241&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
-				{% for place in event.location.all %}
+                {% if event.get_location_url %}
+				    <iframe src="{{ event.get_location_url }}" width="1200" height="450" frameborder="1" style="border:1" allowfullscreen></iframe>
+                {% endif %}
+                {% for place in event.location.all %}
                 <a href="#">{{ place.name }}</a>
 				<ul>
 					<li>{{ place.location }}</li>
