add links to category filter from event

--- a/mainapp/templates/mainapp/includes/inc_event_block.html
+++ b/mainapp/templates/mainapp/includes/inc_event_block.html
@@ -5,7 +5,7 @@
 			<ul>
                 {% for category in event.category.all %}
                     <li>&#8226;</li>
-                    <li>{{ category }}</li>
+                    <li><a href="{% url 'mainapp:category' category.pk %}" class="category-link">{{ category }}</a></li>
                 {% endfor %}
 			</ul>
 			<div class="event-description-title">
