create collection page

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -90,11 +90,16 @@
 		</div>
 		<h1 class="page-title">Подборки</h1>
 		<div class="selections">
+            {% for name, collection in collections.items %}
+                {% if collection|length > 0 %}
 			<div>
-				<a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
-				<h2>Lorem ipsum.</h2>
-				<p>12 событий</p>
+				<a href="#"><img src="{{ collection.0.get_avatar }}" alt="">
+				<h2>{{ name }}</h2>
+				<p>{{ collection|length }} событий</p>
+                </a>
 			</div>
+                {% endif %}
+            {% endfor %}
 			<div>
 				<a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
 				<h2>Lorem ipsum.</h2>
